--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/redux-persist": "^4.0.0",
     "axios": "^1.7.4",
     "clsx": "^2.1.1",
+    "firebase": "^10.13.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
     "sass": "^1.77.8"
   },
